LibApp.WebApp - Authors Pagination Seemingly Working

--- a/LibApp.WebApp/Views/Users/Index.cshtml
+++ b/LibApp.WebApp/Views/Users/Index.cshtml
@@ -78,13 +78,13 @@
             
         <th>IsActive</th>
             
-        <th>CreatedDateTime</th>
-            
-        <th>ModifiedDateTime</th>
-            
-        <th>CreatedByUser</th>
-            
-        <th>ModifiedByUser</th>
+        <th>Created</th>
+                    
+        <th>Modified</th>
+                    
+        <th>CreatedBy</th>
+                    
+        <th>ModifiedBy</th>
 
         <th></th>
     </tr>
