--- a/LibApp.WebApp/Views/Authors/Details.cshtml
+++ b/LibApp.WebApp/Views/Authors/Details.cshtml
@@ -37,18 +37,31 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ModifiedDateTime)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedByUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedByUser)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedByUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedByUser)
-        </dd>
+
+        @if (!Model.CreatedByUser.IsNullOrEmpty())
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.CreatedByUser)
+            </dt>
+            <dd class="col-sm-10">
+                <a href="@Url.Action("Details", "Users", new { id = Model.CreatedByUserId })">
+                    @Model.CreatedByUser
+                </a>
+            </dd>
+        }
+        
+        @if (!Model.ModifiedByUser.IsNullOrEmpty())
+        {
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.ModifiedByUser)
+            </dt>
+            <dd class="col-sm-10">
+                <a href="@Url.Action("Details", "Users", new { id = Model.ModifiedByUserId })">
+                    @Model.ModifiedByUser
+                </a>
+            </dd>
+        }
+
     </dl>
 </div>
 <div>
