LibApp.WebApp - Authors Delete

--- a/LibApp.WebApp/Views/Authors/Index.cshtml
+++ b/LibApp.WebApp/Views/Authors/Index.cshtml
@@ -96,7 +96,7 @@
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
                 <a class="delete-button" 
-                   data-controller="Auhors" 
+                   data-controller="Authors" 
                    data-action="Delete" 
                    data-id="@item.Id" 
                    style="color: #51cbce; text-decoration: none; cursor: pointer;"
