--- a/LibApp.WebApp/Views/Users/Index.cshtml
+++ b/LibApp.WebApp/Views/Users/Index.cshtml
@@ -114,6 +114,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedDateTime)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.ModifiedDateTime)
+            </td>
+            <td>
                 <a href="@Url.Action("Details", "Users", new { id = item.CreatedByUserId })">
                     @item.CreatedByUser
                 </a>
