LibApp.WebApp - Logging With Non-existent User ErrorMessage

--- a/LibApp.WebApp/Views/Departments/Index.cshtml
+++ b/LibApp.WebApp/Views/Departments/Index.cshtml
@@ -52,6 +52,9 @@
                 @Html.DisplayFor(modelItem => item.CreatedDateTime)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.ModifiedDateTime)
+            </td>
+            <td>
                 <a href="@Url.Action("Details", "Users", new { id = item.CreatedByUserId })">
                     @item.CreatedByUser
                 </a>
