LibApp.WebApp - Categories Index & Details

--- a/LibApp.WebApp/Views/Categories/Index.cshtml
+++ b/LibApp.WebApp/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Domain.Models.Category>
+﻿@model IEnumerable<LibApp.WebApp.ViewModels.CategoryViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -50,11 +50,16 @@
                 @Html.DisplayFor(modelItem => item.ModifiedDateTime)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreatedByUser.City)
+                <a href="@Url.Action("Details", "Users", new { id = item.CreatedByUserId })">
+                    @item.CreatedByUser
+                </a>
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ModifiedByUser.City)
+                <a href="@Url.Action("Details", "Users", new { id = item.ModifiedByUserId })">
+                    @item.ModifiedByUser
+                </a>
             </td>
+
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
