--- a/LibApp.WebApp/Views/Categories/Create.cshtml
+++ b/LibApp.WebApp/Views/Categories/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Domain.Models.Category
+﻿@model LibApp.WebApp.ViewModels.CategoryViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -22,14 +22,6 @@
                 <label asp-for="Description" class="control-label"></label>
                 <input asp-for="Description" class="form-control" />
                 <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CreatedByUserId" class="control-label"></label>
-                <select asp-for="CreatedByUserId" class ="form-control" asp-items="ViewBag.CreatedByUserId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="ModifiedByUserId" class="control-label"></label>
-                <select asp-for="ModifiedByUserId" class ="form-control" asp-items="ViewBag.ModifiedByUserId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
