--- a/LibApp.WebApp/Views/Publishers/Details.cshtml
+++ b/LibApp.WebApp/Views/Publishers/Details.cshtml
@@ -1,4 +1,6 @@
-﻿@model Domain.Models.Publisher
+﻿@using Microsoft.IdentityModel.Tokens
+
+@model LibApp.WebApp.ViewModels.PublisherViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -35,18 +37,31 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ModifiedDateTime)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreatedByUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreatedByUser.City)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ModifiedByUser)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ModifiedByUser.City)
-        </dd>
+        
+        @if (!Model.CreatedByUser.IsNullOrEmpty())
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.CreatedByUser)
+            </dt>
+            <dd class="col-sm-10">
+                <a href="@Url.Action("Details", "Users", new { id = Model.CreatedByUserId })">
+                    @Model.CreatedByUser
+                </a>
+            </dd>
+        }
+
+        @if (!Model.ModifiedByUser.IsNullOrEmpty())
+        {
+            <dt class="col-sm-2">
+                @Html.DisplayNameFor(model => model.ModifiedByUser)
+            </dt>
+            <dd class="col-sm-10">
+                <a href="@Url.Action("Details", "Users", new { id = Model.ModifiedByUserId })">
+                    @Model.ModifiedByUser
+                </a>
+            </dd>
+        }
+
     </dl>
 </div>
 <div>
