--- a/LibApp.WebApp/Views/Languages/Index.cshtml
+++ b/LibApp.WebApp/Views/Languages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Domain.Models.Language>
+﻿@model IEnumerable<LibApp.WebApp.ViewModels.LanguageViewModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -28,7 +28,13 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a class="delete-button"
+                   data-controller="Languages"
+                   data-action="Delete"
+                   data-id="@item.Id"
+                   style="color: #51cbce; text-decoration: none; cursor: pointer;"
+                   onmouseover="this.style.textDecoration='underline';"
+                   onmouseout="this.style.textDecoration='none';">Delete</a>
             </td>
         </tr>
 }
