--- a/LibApp.WebApp/Views/Books/Create.cshtml
+++ b/LibApp.WebApp/Views/Books/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
@@ -77,12 +77,19 @@
                 <label asp-for="LanguageId" class="control-label"></label>
                 <select asp-for="LanguageId" class ="form-control" asp-items="ViewBag.LanguageId"></select>
             </div>
-            @*TODO: Image file upload*@
-            @*<div class="form-group">
-                <label asp-for="ImagePath" class="control-label"></label>
-                <input asp-for="ImagePath" class="form-control" />
-                <span asp-validation-for="ImagePath" class="text-danger"></span>
-            </div>*@
+
+            <div class="form-group">
+                <label class="control-label">Add Image</label>
+                <div class="custom-file">
+                    <input asp-for="ImageFile" type="file" class="custom-file-input" id="inputImageFile" onchange="showFileName()">
+                    <label class="custom-file-label" for="inputImageFile">Choose file</label>
+                    <br/>
+                    <button type="button" class="btn btn-outline-secondary btn-sm" id="btnClearImage">Clear</button>
+                </div>
+                <span id="fileNameDisplay" class="text-muted"></span>
+                <span asp-validation-for="ImageFile" class="text-danger"></span>
+            </div>
+            
             <div class="form-group">
                 <label asp-for="Cost" class="control-label"></label>
                 <input asp-for="Cost" class="form-control" />
