--- a/LibApp.WebApp/Views/Books/Details.cshtml
+++ b/LibApp.WebApp/Views/Books/Details.cshtml
@@ -191,6 +191,22 @@
 
     </dl>
 </div>
+
+<div>
+    <hr />
+    <dl class="row">
+        @if (!string.IsNullOrEmpty(Model.ImagePath))
+        {
+            <dt class="col-sm-2">
+                Image
+            </dt>
+            <dd class="col-sm-10">
+                <img src="@Model.ImagePath" alt="Book Image not Loaded" class="img-fluid" style="max-width: 200px; height: auto;" />
+            </dd>
+        }
+    </dl>
+</div>
+
 <div>
     @if (user?.RoleId is (int)RoleEnum.Admin or (int)RoleEnum.Librarian)
     {
