--- a/LibApp.WebApp/Views/Books/Index.cshtml
+++ b/LibApp.WebApp/Views/Books/Index.cshtml
@@ -132,7 +132,9 @@
                 <tr>
                     
                     <td>
-                        @Html.DisplayFor(modelItem => item.Title)
+                        <a asp-action="Details" asp-route-id="@item.Id">
+                            <span style="color: black;">@item.Title</span>
+                        </a>
                     </td>
 
                     <td>
