LibApp.WebApp - TODOs

--- a/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
+++ b/LibApp.WebApp/Views/Shared/Partials/_SidebarPartial.cshtml
@@ -58,6 +58,7 @@
                         <p>Departments</p>
                     </a>
                 </li>
+                @* TODO: Remove if not using *@
                 <li>
                     <a asp-controller="Reservations" asp-action="Index">
                         <i class="nc-icon nc-check-2"></i>
