--- a/LibApp.WebApp/Views/Users/Edit.cshtml
+++ b/LibApp.WebApp/Views/Users/Edit.cshtml
@@ -113,11 +113,21 @@
     
     @if (Model.IsActive)
     {
-        <a asp-action="Deactivate" asp-route-id="@Model.Id">Deactivate</a>
+        <form asp-action="Deactivate" asp-route-id="@Model.Id" method="post" style="display:inline">
+            @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-warning btn-sm">
+                Deactivate
+            </button>
+        </form>
     }
     else
     {
-        <a asp-action="Activate" asp-route-id="@Model.Id">Activate</a>
+        <form asp-action="Activate" asp-route-id="@Model.Id" method="post" style="display:inline">
+            @Html.AntiForgeryToken()
+            <button type="submit" class="btn btn-success btn-sm">
+                Activate
+            </button>
+        </form>
     }
     | 
     @if (user?.RoleId == (int)RoleEnum.Admin)
