--- a/LibApp.WebApp/Views/Departments/Index.cshtml
+++ b/LibApp.WebApp/Views/Departments/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Departments</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -40,7 +40,9 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                <a asp-action="Details" asp-route-id="@item.Id">
+                    <span style="color: black;">@item.Name</span>
+                </a>
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Location)
