Solution-Wide Access Modifiers Change to Better Encapsulate Classes & Refactoring that Ensued

--- a/LibApp.WebApp/Views/Books/Edit.cshtml
+++ b/LibApp.WebApp/Views/Books/Edit.cshtml
@@ -143,6 +143,7 @@
             <input type="hidden" asp-for="CreatedDateTime" />
             <input type="hidden" asp-for="ModifiedDateTime" />
             <input type="hidden" asp-for="ImagePath" />
+            <input type="hidden" asp-for="CreatedByUserId" />
 
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
