--- a/LibApp.WebApp/Views/Users/Edit.cshtml
+++ b/LibApp.WebApp/Views/Users/Edit.cshtml
@@ -100,6 +100,7 @@
             <input type="hidden" asp-for="CreatedByUserId" />
             <input type="hidden" asp-for="CreatedDateTime" />
             <input type="hidden" asp-for="ModifiedDateTime" />
+            <input type="hidden" asp-for="IsActive" />
 
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
